[tool.poetry]
name = "sublime_tower_plugin"
version = "1.0.0"
description = ""
authors = ["Taylor D. Edmiston <tedmiston@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
